[tool.poetry]
name = "conding"
version = "0.1.0"
description = "Conding burves analysis and modelling repository."
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.12"
jupyterlab = "3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
