[tool.poetry]
name = "conding"
version = "0.1.0"
description = "Conding burves analysis and modelling repository."
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
duneanalytics = "^2.0.0"
pandas = "^1.5.3"
hvplot = "^0.8.3"
python-dotenv = "^1.0.0"
dune-client = "^1.0.0"
diskcache = "^5.6.1"
pyparsing = "^3.0.9"
yfinance = "^0.2.18"


[tool.poetry.group.dev.dependencies]
nbdev = "^2.3.12"
jupyterlab = "3.6.0"
ipython = "^8.12.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
